2010-11-29  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Xan Lopez.

        [Gtk] Tooltips should be fully keyboard accessible
        https://bugs.webkit.org/show_bug.cgi?id=25525

        Position the tooltip under the current focused element when the
        tooltip has been triggered using the keyboard.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_query_tooltip):
        (webkit_web_view_show_help):
        (webkit_web_view_class_init):

Canonical link: https://commits.webkit.org/63248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72789 268f45cc-cd09-0410-ab3c-d52691b4dbfc